SUBDIRS =

if WITH_BUNDLED_RUBY_GLIB2_LATEST
SUBDIRS += glib2-3.4.9
endif

if WITH_BUNDLED_RUBY_GLIB2_2_2_5
SUBDIRS += glib-2.2.5
endif

SUBDIRS +=					\
	ext					\
	lib					\
	ruby-milter				\
	test					\
	sample

EXTRA_DIST =					\
	$(test_unit_files)			\
	$(ruby_glib2_latest_files)		\
	$(ruby_glib2_2_2_5_files)

DISTCLEANFILES =				\
	glib-2.2.5/Makefile			\
	glib2-3.4.9/Makefile

echo-abs-top-builddir:
	@echo $(abs_top_builddir)

# % find test-unit -not -path '*/.git/*' -type f | sort | sed -e 's,^,\t,g'
# Use region and C-c C-\ for adding backslashes to the above list.
test_unit_files =						\
	test-unit/.gitignore					\
	test-unit/.travis.yml					\
	test-unit/.yardopts					\
	test-unit/COPYING					\
	test-unit/GPL						\
	test-unit/Gemfile					\
	test-unit/LGPL						\
	test-unit/PSFL						\
	test-unit/README.md					\
	test-unit/Rakefile					\
	test-unit/appveyor.yml					\
	test-unit/doc/html/bar.png				\
	test-unit/doc/html/bar.svg				\
	test-unit/doc/html/color-diff.png			\
	test-unit/doc/html/developer.png			\
	test-unit/doc/html/developer.svg			\
	test-unit/doc/html/famfamfam-logo.png			\
	test-unit/doc/html/favicon.ico				\
	test-unit/doc/html/favicon.png				\
	test-unit/doc/html/favicon.svg				\
	test-unit/doc/html/github-logo.png			\
	test-unit/doc/html/heading-mark.png			\
	test-unit/doc/html/heading-mark.svg			\
	test-unit/doc/html/index.html				\
	test-unit/doc/html/install.png				\
	test-unit/doc/html/install.svg				\
	test-unit/doc/html/ja/index.html			\
	test-unit/doc/html/jp.png				\
	test-unit/doc/html/kinotan-failure.png			\
	test-unit/doc/html/kinotan-pass.png			\
	test-unit/doc/html/logo.png				\
	test-unit/doc/html/logo.svg				\
	test-unit/doc/html/reference.png			\
	test-unit/doc/html/tango-logo.png			\
	test-unit/doc/html/test-unit.css			\
	test-unit/doc/html/tutorial.png				\
	test-unit/doc/html/tutorial.svg				\
	test-unit/doc/html/us.png				\
	test-unit/doc/po/ja.po					\
	test-unit/doc/templates/footer.en.html.erb		\
	test-unit/doc/templates/footer.ja.html.erb		\
	test-unit/doc/templates/head.en.html.erb		\
	test-unit/doc/templates/head.ja.html.erb		\
	test-unit/doc/templates/header.en.html.erb		\
	test-unit/doc/templates/header.ja.html.erb		\
	test-unit/doc/text/how-to.md				\
	test-unit/doc/text/news.md				\
	test-unit/lib/test-unit.rb				\
	test-unit/lib/test/unit.rb				\
	test-unit/lib/test/unit/assertion-failed-error.rb	\
	test-unit/lib/test/unit/assertions.rb			\
	test-unit/lib/test/unit/attribute-matcher.rb		\
	test-unit/lib/test/unit/attribute.rb			\
	test-unit/lib/test/unit/autorunner.rb			\
	test-unit/lib/test/unit/code-snippet-fetcher.rb		\
	test-unit/lib/test/unit/collector.rb			\
	test-unit/lib/test/unit/collector/descendant.rb		\
	test-unit/lib/test/unit/collector/dir.rb		\
	test-unit/lib/test/unit/collector/load.rb		\
	test-unit/lib/test/unit/collector/objectspace.rb	\
	test-unit/lib/test/unit/collector/xml.rb		\
	test-unit/lib/test/unit/color-scheme.rb			\
	test-unit/lib/test/unit/color.rb			\
	test-unit/lib/test/unit/data.rb				\
	test-unit/lib/test/unit/diff.rb				\
	test-unit/lib/test/unit/error.rb			\
	test-unit/lib/test/unit/exception-handler.rb		\
	test-unit/lib/test/unit/failure.rb			\
	test-unit/lib/test/unit/fault-location-detector.rb	\
	test-unit/lib/test/unit/fixture.rb			\
	test-unit/lib/test/unit/notification.rb			\
	test-unit/lib/test/unit/omission.rb			\
	test-unit/lib/test/unit/pending.rb			\
	test-unit/lib/test/unit/priority.rb			\
	test-unit/lib/test/unit/runner/console.rb		\
	test-unit/lib/test/unit/runner/emacs.rb			\
	test-unit/lib/test/unit/runner/xml.rb			\
	test-unit/lib/test/unit/test-suite-creator.rb		\
	test-unit/lib/test/unit/testcase.rb			\
	test-unit/lib/test/unit/testresult.rb			\
	test-unit/lib/test/unit/testsuite.rb			\
	test-unit/lib/test/unit/ui/console/outputlevel.rb	\
	test-unit/lib/test/unit/ui/console/testrunner.rb	\
	test-unit/lib/test/unit/ui/emacs/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunnermediator.rb	\
	test-unit/lib/test/unit/ui/testrunnerutilities.rb	\
	test-unit/lib/test/unit/ui/xml/testrunner.rb		\
	test-unit/lib/test/unit/util/backtracefilter.rb		\
	test-unit/lib/test/unit/util/method-owner-finder.rb	\
	test-unit/lib/test/unit/util/observable.rb		\
	test-unit/lib/test/unit/util/output.rb			\
	test-unit/lib/test/unit/util/procwrapper.rb		\
	test-unit/lib/test/unit/version.rb			\
	test-unit/sample/adder.rb				\
	test-unit/sample/subtracter.rb				\
	test-unit/sample/test_adder.rb				\
	test-unit/sample/test_subtracter.rb			\
	test-unit/sample/test_user.rb				\
	test-unit/test-unit.gemspec				\
	test-unit/test/collector/test-descendant.rb		\
	test-unit/test/collector/test-load.rb			\
	test-unit/test/collector/test_dir.rb			\
	test-unit/test/collector/test_objectspace.rb		\
	test-unit/test/fixtures/header-label.csv		\
	test-unit/test/fixtures/header-label.tsv		\
	test-unit/test/fixtures/header.csv			\
	test-unit/test/fixtures/header.tsv			\
	test-unit/test/fixtures/no-header.csv			\
	test-unit/test/fixtures/no-header.tsv			\
	test-unit/test/fixtures/plus.csv			\
	test-unit/test/run-test.rb				\
	test-unit/test/test-assertions.rb			\
	test-unit/test/test-attribute-matcher.rb		\
	test-unit/test/test-attribute.rb			\
	test-unit/test/test-code-snippet.rb			\
	test-unit/test/test-color-scheme.rb			\
	test-unit/test/test-color.rb				\
	test-unit/test/test-data.rb				\
	test-unit/test/test-diff.rb				\
	test-unit/test/test-emacs-runner.rb			\
	test-unit/test/test-error.rb				\
	test-unit/test/test-failure.rb				\
	test-unit/test/test-fault-location-detector.rb		\
	test-unit/test/test-fixture.rb				\
	test-unit/test/test-notification.rb			\
	test-unit/test/test-omission.rb				\
	test-unit/test/test-pending.rb				\
	test-unit/test/test-priority.rb				\
	test-unit/test/test-test-case.rb			\
	test-unit/test/test-test-result.rb			\
	test-unit/test/test-test-suite-creator.rb		\
	test-unit/test/test-test-suite.rb			\
	test-unit/test/testunit-test-util.rb			\
	test-unit/test/ui/test_testrunmediator.rb		\
	test-unit/test/util/test-method-owner-finder.rb		\
	test-unit/test/util/test-output.rb			\
	test-unit/test/util/test_backtracefilter.rb		\
	test-unit/test/util/test_observable.rb			\
	test-unit/test/util/test_procwrapper.rb

# % find glib-2.2.5 -type f | sort
# Use region and C-c C-\ for adding backslashes to the above list.
ruby_glib2_2_2_5_files =						\
	glib-2.2.5/COPYING.LIB						\
	glib-2.2.5/README						\
	glib-2.2.5/Rakefile						\
	glib-2.2.5/TODO							\
	glib-2.2.5/ext/glib2/depend					\
	glib-2.2.5/ext/glib2/extconf.rb					\
	glib-2.2.5/ext/glib2/glib2.def					\
	glib-2.2.5/ext/glib2/rbgcompat.h				\
	glib-2.2.5/ext/glib2/rbglib.c					\
	glib-2.2.5/ext/glib2/rbglib.h					\
	glib-2.2.5/ext/glib2/rbglib2conversions.h			\
	glib-2.2.5/ext/glib2/rbglib_bookmarkfile.c			\
	glib-2.2.5/ext/glib2/rbglib_convert.c				\
	glib-2.2.5/ext/glib2/rbglib_error.c				\
	glib-2.2.5/ext/glib2/rbglib_fileutils.c				\
	glib-2.2.5/ext/glib2/rbglib_gettext.c				\
	glib-2.2.5/ext/glib2/rbglib_i18n.c				\
	glib-2.2.5/ext/glib2/rbglib_int64.c				\
	glib-2.2.5/ext/glib2/rbglib_io_constants.c			\
	glib-2.2.5/ext/glib2/rbglib_iochannel.c				\
	glib-2.2.5/ext/glib2/rbglib_iochannel_win32_socket.c		\
	glib-2.2.5/ext/glib2/rbglib_iochannelerror.c			\
	glib-2.2.5/ext/glib2/rbglib_keyfile.c				\
	glib-2.2.5/ext/glib2/rbglib_maincontext.c			\
	glib-2.2.5/ext/glib2/rbglib_mainloop.c				\
	glib-2.2.5/ext/glib2/rbglib_messages.c				\
	glib-2.2.5/ext/glib2/rbglib_pollfd.c				\
	glib-2.2.5/ext/glib2/rbglib_shell.c				\
	glib-2.2.5/ext/glib2/rbglib_shellerror.c			\
	glib-2.2.5/ext/glib2/rbglib_source.c				\
	glib-2.2.5/ext/glib2/rbglib_spawn.c				\
	glib-2.2.5/ext/glib2/rbglib_spawnerror.c			\
	glib-2.2.5/ext/glib2/rbglib_threads.c				\
	glib-2.2.5/ext/glib2/rbglib_timer.c				\
	glib-2.2.5/ext/glib2/rbglib_ucs4.c				\
	glib-2.2.5/ext/glib2/rbglib_unichar.c				\
	glib-2.2.5/ext/glib2/rbglib_unicode.c				\
	glib-2.2.5/ext/glib2/rbglib_utf16.c				\
	glib-2.2.5/ext/glib2/rbglib_utf8.c				\
	glib-2.2.5/ext/glib2/rbglib_utils.c				\
	glib-2.2.5/ext/glib2/rbglib_win32.c				\
	glib-2.2.5/ext/glib2/rbglibdeprecated.c				\
	glib-2.2.5/ext/glib2/rbglibdeprecated.h				\
	glib-2.2.5/ext/glib2/rbgobj_boxed.c				\
	glib-2.2.5/ext/glib2/rbgobj_closure.c				\
	glib-2.2.5/ext/glib2/rbgobj_convert.c				\
	glib-2.2.5/ext/glib2/rbgobj_enumflags.c				\
	glib-2.2.5/ext/glib2/rbgobj_enums.c				\
	glib-2.2.5/ext/glib2/rbgobj_flags.c				\
	glib-2.2.5/ext/glib2/rbgobj_object.c				\
	glib-2.2.5/ext/glib2/rbgobj_param.c				\
	glib-2.2.5/ext/glib2/rbgobj_paramspecs.c			\
	glib-2.2.5/ext/glib2/rbgobj_signal.c				\
	glib-2.2.5/ext/glib2/rbgobj_strv.c				\
	glib-2.2.5/ext/glib2/rbgobj_type.c				\
	glib-2.2.5/ext/glib2/rbgobj_typeinstance.c			\
	glib-2.2.5/ext/glib2/rbgobj_typeinterface.c			\
	glib-2.2.5/ext/glib2/rbgobj_typemodule.c			\
	glib-2.2.5/ext/glib2/rbgobj_typeplugin.c			\
	glib-2.2.5/ext/glib2/rbgobj_value.c				\
	glib-2.2.5/ext/glib2/rbgobj_valuearray.c			\
	glib-2.2.5/ext/glib2/rbgobj_valuetypes.c			\
	glib-2.2.5/ext/glib2/rbgobject.c				\
	glib-2.2.5/ext/glib2/rbgobject.h				\
	glib-2.2.5/ext/glib2/rbgprivate.h				\
	glib-2.2.5/ext/glib2/rbgutil.c					\
	glib-2.2.5/ext/glib2/rbgutil.h					\
	glib-2.2.5/ext/glib2/rbgutil_callback.c				\
	glib-2.2.5/ext/glib2/rbgutil_list.c				\
	glib-2.2.5/ext/glib2/rbgutil_list.h				\
	glib-2.2.5/ext/glib2/rbgutildeprecated.c			\
	glib-2.2.5/ext/glib2/rbgutildeprecated.h			\
	glib-2.2.5/extconf.rb						\
	glib-2.2.5/lib/glib-mkenums.rb					\
	glib-2.2.5/lib/glib2.rb						\
	glib-2.2.5/lib/glib2/deprecatable.rb				\
	glib-2.2.5/lib/gnome2-raketask.rb				\
	glib-2.2.5/lib/gnome2/rake/external-package.rb			\
	glib-2.2.5/lib/gnome2/rake/native-binary-build-task.rb		\
	glib-2.2.5/lib/gnome2/rake/package-task.rb			\
	glib-2.2.5/lib/gnome2/rake/package.rb				\
	glib-2.2.5/lib/gnome2/rake/source-download-task.rb		\
	glib-2.2.5/lib/gnome2/rake/windows-binary-build-task.rb		\
	glib-2.2.5/lib/gnome2/rake/windows-binary-download-task.rb	\
	glib-2.2.5/lib/mkmf-gnome2.rb					\
	glib-2.2.5/lib/pkg-config.rb					\
	glib-2.2.5/patches/glib-2.38.2-add-missing-exeext.diff		\
	glib-2.2.5/sample/bookmarkfile.rb				\
	glib-2.2.5/sample/idle.rb					\
	glib-2.2.5/sample/iochannel.rb					\
	glib-2.2.5/sample/keyfile.rb					\
	glib-2.2.5/sample/shell.rb					\
	glib-2.2.5/sample/spawn.rb					\
	glib-2.2.5/sample/timeout.rb					\
	glib-2.2.5/sample/timeout2.rb					\
	glib-2.2.5/sample/timer.rb					\
	glib-2.2.5/sample/type-register.rb				\
	glib-2.2.5/sample/type-register2.rb				\
	glib-2.2.5/sample/utils.rb					\
	glib-2.2.5/test/glib-test-init.rb				\
	glib-2.2.5/test/glib-test-utils.rb				\
	glib-2.2.5/test/run-test.rb					\
	glib-2.2.5/test/test_enum.rb					\
	glib-2.2.5/test/test_file_utils.rb				\
	glib-2.2.5/test/test_flags.rb					\
	glib-2.2.5/test/test_glib2.rb					\
	glib-2.2.5/test/test_iochannel.rb				\
	glib-2.2.5/test/test_key_file.rb				\
	glib-2.2.5/test/test_mkenums.rb					\
	glib-2.2.5/test/test_poll_fd.rb					\
	glib-2.2.5/test/test_signal.rb					\
	glib-2.2.5/test/test_source.rb					\
	glib-2.2.5/test/test_spawn.rb					\
	glib-2.2.5/test/test_timeout.rb					\
	glib-2.2.5/test/test_unicode.rb					\
	glib-2.2.5/test/test_utils.rb					\
	glib-2.2.5/test/test_value.rb					\
	glib-2.2.5/test/test_win32.rb

# % find glib-3.4.9 -type f | sort
# Use region and C-c C-\ for adding backslashes to the above list.
ruby_glib2_latest_files =						\
	glib2-3.4.9/COPYING.LIB						\
	glib2-3.4.9/README.md						\
	glib2-3.4.9/Rakefile						\
	glib2-3.4.9/ext/glib2/depend					\
	glib2-3.4.9/ext/glib2/extconf.rb				\
	glib2-3.4.9/ext/glib2/glib-enum-types.c				\
	glib2-3.4.9/ext/glib2/glib-enum-types.h				\
	glib2-3.4.9/ext/glib2/glib2.def					\
	glib2-3.4.9/ext/glib2/rbgcompat.h				\
	glib2-3.4.9/ext/glib2/rbglib-bytes.c				\
	glib2-3.4.9/ext/glib2/rbglib-gc.c				\
	glib2-3.4.9/ext/glib2/rbglib-variant-type.c			\
	glib2-3.4.9/ext/glib2/rbglib-variant.c				\
	glib2-3.4.9/ext/glib2/rbglib.c					\
	glib2-3.4.9/ext/glib2/rbglib.h					\
	glib2-3.4.9/ext/glib2/rbglib2conversions.h			\
	glib2-3.4.9/ext/glib2/rbglib_bookmarkfile.c			\
	glib2-3.4.9/ext/glib2/rbglib_convert.c				\
	glib2-3.4.9/ext/glib2/rbglib_datetime.c				\
	glib2-3.4.9/ext/glib2/rbglib_error.c				\
	glib2-3.4.9/ext/glib2/rbglib_fileutils.c			\
	glib2-3.4.9/ext/glib2/rbglib_gettext.c				\
	glib2-3.4.9/ext/glib2/rbglib_i18n.c				\
	glib2-3.4.9/ext/glib2/rbglib_int64.c				\
	glib2-3.4.9/ext/glib2/rbglib_io_constants.c			\
	glib2-3.4.9/ext/glib2/rbglib_iochannel.c			\
	glib2-3.4.9/ext/glib2/rbglib_iochannel_win32_socket.c		\
	glib2-3.4.9/ext/glib2/rbglib_iochannelerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_keyfile.c				\
	glib2-3.4.9/ext/glib2/rbglib_maincontext.c			\
	glib2-3.4.9/ext/glib2/rbglib_mainloop.c				\
	glib2-3.4.9/ext/glib2/rbglib_matchinfo.c			\
	glib2-3.4.9/ext/glib2/rbglib_messages.c				\
	glib2-3.4.9/ext/glib2/rbglib_pollfd.c				\
	glib2-3.4.9/ext/glib2/rbglib_regex.c				\
	glib2-3.4.9/ext/glib2/rbglib_shell.c				\
	glib2-3.4.9/ext/glib2/rbglib_shellerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_source.c				\
	glib2-3.4.9/ext/glib2/rbglib_spawn.c				\
	glib2-3.4.9/ext/glib2/rbglib_spawnerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_threads.c				\
	glib2-3.4.9/ext/glib2/rbglib_timer.c				\
	glib2-3.4.9/ext/glib2/rbglib_timezone.c				\
	glib2-3.4.9/ext/glib2/rbglib_ucs4.c				\
	glib2-3.4.9/ext/glib2/rbglib_unichar.c				\
	glib2-3.4.9/ext/glib2/rbglib_unicode.c				\
	glib2-3.4.9/ext/glib2/rbglib_utf16.c				\
	glib2-3.4.9/ext/glib2/rbglib_utf8.c				\
	glib2-3.4.9/ext/glib2/rbglib_utils.c				\
	glib2-3.4.9/ext/glib2/rbglib_win32.c				\
	glib2-3.4.9/ext/glib2/rbglibdeprecated.c			\
	glib2-3.4.9/ext/glib2/rbglibdeprecated.h			\
	glib2-3.4.9/ext/glib2/rbgobj_binding.c				\
	glib2-3.4.9/ext/glib2/rbgobj_boxed.c				\
	glib2-3.4.9/ext/glib2/rbgobj_closure.c				\
	glib2-3.4.9/ext/glib2/rbgobj_convert.c				\
	glib2-3.4.9/ext/glib2/rbgobj_enumflags.c			\
	glib2-3.4.9/ext/glib2/rbgobj_enums.c				\
	glib2-3.4.9/ext/glib2/rbgobj_flags.c				\
	glib2-3.4.9/ext/glib2/rbgobj_object.c				\
	glib2-3.4.9/ext/glib2/rbgobj_param.c				\
	glib2-3.4.9/ext/glib2/rbgobj_paramspecs.c			\
	glib2-3.4.9/ext/glib2/rbgobj_signal.c				\
	glib2-3.4.9/ext/glib2/rbgobj_strv.c				\
	glib2-3.4.9/ext/glib2/rbgobj_type.c				\
	glib2-3.4.9/ext/glib2/rbgobj_typeinstance.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typeinterface.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typemodule.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typeplugin.c			\
	glib2-3.4.9/ext/glib2/rbgobj_value.c				\
	glib2-3.4.9/ext/glib2/rbgobj_valuetypes.c			\
	glib2-3.4.9/ext/glib2/rbgobject.c				\
	glib2-3.4.9/ext/glib2/rbgobject.h				\
	glib2-3.4.9/ext/glib2/rbgprivate.h				\
	glib2-3.4.9/ext/glib2/rbgutil.c					\
	glib2-3.4.9/ext/glib2/rbgutil.h					\
	glib2-3.4.9/ext/glib2/rbgutil_callback.c			\
	glib2-3.4.9/ext/glib2/rbgutil_list.c				\
	glib2-3.4.9/ext/glib2/rbgutil_list.h				\
	glib2-3.4.9/ext/glib2/rbgutildeprecated.c			\
	glib2-3.4.9/ext/glib2/rbgutildeprecated.h			\
	glib2-3.4.9/extconf.rb						\
	glib2-3.4.9/glib2.gemspec					\
	glib2-3.4.9/lib/glib-mkenums.rb					\
	glib2-3.4.9/lib/glib2.rb					\
	glib2-3.4.9/lib/glib2/deprecatable.rb				\
	glib2-3.4.9/lib/glib2/deprecated.rb				\
	glib2-3.4.9/lib/glib2/regex.rb					\
	glib2-3.4.9/lib/glib2/version.rb				\
	glib2-3.4.9/lib/gnome2-raketask.rb				\
	glib2-3.4.9/lib/gnome2/rake/external-package.rb			\
	glib2-3.4.9/lib/gnome2/rake/native-binary-build-task.rb		\
	glib2-3.4.9/lib/gnome2/rake/package-task.rb			\
	glib2-3.4.9/lib/gnome2/rake/package.rb				\
	glib2-3.4.9/lib/gnome2/rake/source-download-task.rb		\
	glib2-3.4.9/lib/gnome2/rake/windows-binary-build-task.rb	\
	glib2-3.4.9/lib/gnome2/rake/windows-binary-download-task.rb	\
	glib2-3.4.9/lib/mkmf-gnome.rb					\
	glib2-3.4.9/lib/mkmf-gnome2.rb					\
	glib2-3.4.9/sample/bookmarkfile.rb				\
	glib2-3.4.9/sample/idle.rb					\
	glib2-3.4.9/sample/iochannel.rb					\
	glib2-3.4.9/sample/keyfile.rb					\
	glib2-3.4.9/sample/shell.rb					\
	glib2-3.4.9/sample/spawn.rb					\
	glib2-3.4.9/sample/timeout.rb					\
	glib2-3.4.9/sample/timeout2.rb					\
	glib2-3.4.9/sample/timer.rb					\
	glib2-3.4.9/sample/type-register.rb				\
	glib2-3.4.9/sample/type-register2.rb				\
	glib2-3.4.9/sample/utils.rb					\
	glib2-3.4.9/test/glib-test-utils.rb				\
	glib2-3.4.9/test/run-test.rb					\
	glib2-3.4.9/test/test-binding.rb				\
	glib2-3.4.9/test/test-bytes.rb					\
	glib2-3.4.9/test/test-date-time.rb				\
	glib2-3.4.9/test/test-enum.rb					\
	glib2-3.4.9/test/test-error.rb					\
	glib2-3.4.9/test/test-file-utils.rb				\
	glib2-3.4.9/test/test-flags.rb					\
	glib2-3.4.9/test/test-glib2.rb					\
	glib2-3.4.9/test/test-iochannel.rb				\
	glib2-3.4.9/test/test-key-file.rb				\
	glib2-3.4.9/test/test-match-info.rb				\
	glib2-3.4.9/test/test-mkenums.rb				\
	glib2-3.4.9/test/test-poll-fd.rb				\
	glib2-3.4.9/test/test-regex.rb					\
	glib2-3.4.9/test/test-signal.rb					\
	glib2-3.4.9/test/test-source.rb					\
	glib2-3.4.9/test/test-spawn.rb					\
	glib2-3.4.9/test/test-time-zone.rb				\
	glib2-3.4.9/test/test-timeout.rb				\
	glib2-3.4.9/test/test-type-interface.rb				\
	glib2-3.4.9/test/test-type.rb					\
	glib2-3.4.9/test/test-unicode.rb				\
	glib2-3.4.9/test/test-utils.rb					\
	glib2-3.4.9/test/test-value.rb					\
	glib2-3.4.9/test/test-variant-type.rb				\
	glib2-3.4.9/test/test-variant.rb				\
	glib2-3.4.9/test/test-version.rb				\
	glib2-3.4.9/test/test-win32.rb					\
	glib2-3.4.9/version.rb
