SUBDIRS =

if WITH_BUNDLED_RUBY_GLIB2_LATEST
SUBDIRS += glib2-3.4.9
SUBDIRS += gio2-3.4.9
SUBDIRS += gobject-introspection-3.4.9
endif

SUBDIRS +=					\
	ext					\
	lib					\
	ruby-milter				\
	test					\
	sample

EXTRA_DIST =						\
	$(native_package_installerpkg_files)		\
	$(pkg_config_files)				\
	$(ruby_gio2_latest_files)			\
	$(ruby_glib2_latest_files)			\
	$(ruby_gobject_introspection_latest_files)	\
	$(test_unit_files)

DISTCLEANFILES =				\
	glib2-3.4.9/Makefile			\
	gio2-3.4.9/Makefile			\
	gobject-introspection/Makefile

echo-abs-top-builddir:
	@echo $(abs_top_builddir)

# % find test-unit -not -path '*/.git/*' -type f | sort | sed -e 's,^,\t,g'
# Use region and C-c C-\ for adding backslashes to the above list.
test_unit_files =						\
	test-unit/.gitignore					\
	test-unit/.travis.yml					\
	test-unit/.yardopts					\
	test-unit/COPYING					\
	test-unit/GPL						\
	test-unit/Gemfile					\
	test-unit/LGPL						\
	test-unit/PSFL						\
	test-unit/README.md					\
	test-unit/Rakefile					\
	test-unit/appveyor.yml					\
	test-unit/doc/html/bar.png				\
	test-unit/doc/html/bar.svg				\
	test-unit/doc/html/color-diff.png			\
	test-unit/doc/html/developer.png			\
	test-unit/doc/html/developer.svg			\
	test-unit/doc/html/famfamfam-logo.png			\
	test-unit/doc/html/favicon.ico				\
	test-unit/doc/html/favicon.png				\
	test-unit/doc/html/favicon.svg				\
	test-unit/doc/html/github-logo.png			\
	test-unit/doc/html/heading-mark.png			\
	test-unit/doc/html/heading-mark.svg			\
	test-unit/doc/html/index.html				\
	test-unit/doc/html/install.png				\
	test-unit/doc/html/install.svg				\
	test-unit/doc/html/ja/index.html			\
	test-unit/doc/html/jp.png				\
	test-unit/doc/html/kinotan-failure.png			\
	test-unit/doc/html/kinotan-pass.png			\
	test-unit/doc/html/logo.png				\
	test-unit/doc/html/logo.svg				\
	test-unit/doc/html/reference.png			\
	test-unit/doc/html/tango-logo.png			\
	test-unit/doc/html/test-unit.css			\
	test-unit/doc/html/tutorial.png				\
	test-unit/doc/html/tutorial.svg				\
	test-unit/doc/html/us.png				\
	test-unit/doc/po/ja.po					\
	test-unit/doc/templates/footer.en.html.erb		\
	test-unit/doc/templates/footer.ja.html.erb		\
	test-unit/doc/templates/head.en.html.erb		\
	test-unit/doc/templates/head.ja.html.erb		\
	test-unit/doc/templates/header.en.html.erb		\
	test-unit/doc/templates/header.ja.html.erb		\
	test-unit/doc/text/how-to.md				\
	test-unit/doc/text/news.md				\
	test-unit/lib/test-unit.rb				\
	test-unit/lib/test/unit.rb				\
	test-unit/lib/test/unit/assertion-failed-error.rb	\
	test-unit/lib/test/unit/assertions.rb			\
	test-unit/lib/test/unit/attribute-matcher.rb		\
	test-unit/lib/test/unit/attribute.rb			\
	test-unit/lib/test/unit/autorunner.rb			\
	test-unit/lib/test/unit/code-snippet-fetcher.rb		\
	test-unit/lib/test/unit/collector.rb			\
	test-unit/lib/test/unit/collector/descendant.rb		\
	test-unit/lib/test/unit/collector/dir.rb		\
	test-unit/lib/test/unit/collector/load.rb		\
	test-unit/lib/test/unit/collector/objectspace.rb	\
	test-unit/lib/test/unit/collector/xml.rb		\
	test-unit/lib/test/unit/color-scheme.rb			\
	test-unit/lib/test/unit/color.rb			\
	test-unit/lib/test/unit/data.rb				\
	test-unit/lib/test/unit/diff.rb				\
	test-unit/lib/test/unit/error.rb			\
	test-unit/lib/test/unit/exception-handler.rb		\
	test-unit/lib/test/unit/failure.rb			\
	test-unit/lib/test/unit/fault-location-detector.rb	\
	test-unit/lib/test/unit/fixture.rb			\
	test-unit/lib/test/unit/notification.rb			\
	test-unit/lib/test/unit/omission.rb			\
	test-unit/lib/test/unit/pending.rb			\
	test-unit/lib/test/unit/priority.rb			\
	test-unit/lib/test/unit/runner/console.rb		\
	test-unit/lib/test/unit/runner/emacs.rb			\
	test-unit/lib/test/unit/runner/xml.rb			\
	test-unit/lib/test/unit/test-suite-creator.rb		\
	test-unit/lib/test/unit/testcase.rb			\
	test-unit/lib/test/unit/testresult.rb			\
	test-unit/lib/test/unit/testsuite.rb			\
	test-unit/lib/test/unit/ui/console/outputlevel.rb	\
	test-unit/lib/test/unit/ui/console/testrunner.rb	\
	test-unit/lib/test/unit/ui/emacs/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunner.rb		\
	test-unit/lib/test/unit/ui/testrunnermediator.rb	\
	test-unit/lib/test/unit/ui/testrunnerutilities.rb	\
	test-unit/lib/test/unit/ui/xml/testrunner.rb		\
	test-unit/lib/test/unit/util/backtracefilter.rb		\
	test-unit/lib/test/unit/util/method-owner-finder.rb	\
	test-unit/lib/test/unit/util/observable.rb		\
	test-unit/lib/test/unit/util/output.rb			\
	test-unit/lib/test/unit/util/procwrapper.rb		\
	test-unit/lib/test/unit/version.rb			\
	test-unit/sample/adder.rb				\
	test-unit/sample/subtracter.rb				\
	test-unit/sample/test_adder.rb				\
	test-unit/sample/test_subtracter.rb			\
	test-unit/sample/test_user.rb				\
	test-unit/test-unit.gemspec				\
	test-unit/test/collector/test-descendant.rb		\
	test-unit/test/collector/test-load.rb			\
	test-unit/test/collector/test_dir.rb			\
	test-unit/test/collector/test_objectspace.rb		\
	test-unit/test/fixtures/header-label.csv		\
	test-unit/test/fixtures/header-label.tsv		\
	test-unit/test/fixtures/header.csv			\
	test-unit/test/fixtures/header.tsv			\
	test-unit/test/fixtures/no-header.csv			\
	test-unit/test/fixtures/no-header.tsv			\
	test-unit/test/fixtures/plus.csv			\
	test-unit/test/run-test.rb				\
	test-unit/test/test-assertions.rb			\
	test-unit/test/test-attribute-matcher.rb		\
	test-unit/test/test-attribute.rb			\
	test-unit/test/test-code-snippet.rb			\
	test-unit/test/test-color-scheme.rb			\
	test-unit/test/test-color.rb				\
	test-unit/test/test-data.rb				\
	test-unit/test/test-diff.rb				\
	test-unit/test/test-emacs-runner.rb			\
	test-unit/test/test-error.rb				\
	test-unit/test/test-failure.rb				\
	test-unit/test/test-fault-location-detector.rb		\
	test-unit/test/test-fixture.rb				\
	test-unit/test/test-notification.rb			\
	test-unit/test/test-omission.rb				\
	test-unit/test/test-pending.rb				\
	test-unit/test/test-priority.rb				\
	test-unit/test/test-test-case.rb			\
	test-unit/test/test-test-result.rb			\
	test-unit/test/test-test-suite-creator.rb		\
	test-unit/test/test-test-suite.rb			\
	test-unit/test/testunit-test-util.rb			\
	test-unit/test/ui/test_testrunmediator.rb		\
	test-unit/test/util/test-method-owner-finder.rb		\
	test-unit/test/util/test-output.rb			\
	test-unit/test/util/test_backtracefilter.rb		\
	test-unit/test/util/test_observable.rb			\
	test-unit/test/util/test_procwrapper.rb

# % find glib-3.4.9 -type f | sort
# Use region and C-c C-\ for adding backslashes to the above list.
ruby_glib2_latest_files =						\
	glib2-3.4.9/COPYING.LIB						\
	glib2-3.4.9/README.md						\
	glib2-3.4.9/Rakefile						\
	glib2-3.4.9/ext/glib2/depend					\
	glib2-3.4.9/ext/glib2/extconf.rb				\
	glib2-3.4.9/ext/glib2/glib-enum-types.c				\
	glib2-3.4.9/ext/glib2/glib-enum-types.h				\
	glib2-3.4.9/ext/glib2/glib2.def					\
	glib2-3.4.9/ext/glib2/rbgcompat.h				\
	glib2-3.4.9/ext/glib2/rbglib-bytes.c				\
	glib2-3.4.9/ext/glib2/rbglib-gc.c				\
	glib2-3.4.9/ext/glib2/rbglib-variant-type.c			\
	glib2-3.4.9/ext/glib2/rbglib-variant.c				\
	glib2-3.4.9/ext/glib2/rbglib.c					\
	glib2-3.4.9/ext/glib2/rbglib.h					\
	glib2-3.4.9/ext/glib2/rbglib2conversions.h			\
	glib2-3.4.9/ext/glib2/rbglib_bookmarkfile.c			\
	glib2-3.4.9/ext/glib2/rbglib_convert.c				\
	glib2-3.4.9/ext/glib2/rbglib_datetime.c				\
	glib2-3.4.9/ext/glib2/rbglib_error.c				\
	glib2-3.4.9/ext/glib2/rbglib_fileutils.c			\
	glib2-3.4.9/ext/glib2/rbglib_gettext.c				\
	glib2-3.4.9/ext/glib2/rbglib_i18n.c				\
	glib2-3.4.9/ext/glib2/rbglib_int64.c				\
	glib2-3.4.9/ext/glib2/rbglib_io_constants.c			\
	glib2-3.4.9/ext/glib2/rbglib_iochannel.c			\
	glib2-3.4.9/ext/glib2/rbglib_iochannel_win32_socket.c		\
	glib2-3.4.9/ext/glib2/rbglib_iochannelerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_keyfile.c				\
	glib2-3.4.9/ext/glib2/rbglib_maincontext.c			\
	glib2-3.4.9/ext/glib2/rbglib_mainloop.c				\
	glib2-3.4.9/ext/glib2/rbglib_matchinfo.c			\
	glib2-3.4.9/ext/glib2/rbglib_messages.c				\
	glib2-3.4.9/ext/glib2/rbglib_pollfd.c				\
	glib2-3.4.9/ext/glib2/rbglib_regex.c				\
	glib2-3.4.9/ext/glib2/rbglib_shell.c				\
	glib2-3.4.9/ext/glib2/rbglib_shellerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_source.c				\
	glib2-3.4.9/ext/glib2/rbglib_spawn.c				\
	glib2-3.4.9/ext/glib2/rbglib_spawnerror.c			\
	glib2-3.4.9/ext/glib2/rbglib_threads.c				\
	glib2-3.4.9/ext/glib2/rbglib_timer.c				\
	glib2-3.4.9/ext/glib2/rbglib_timezone.c				\
	glib2-3.4.9/ext/glib2/rbglib_ucs4.c				\
	glib2-3.4.9/ext/glib2/rbglib_unichar.c				\
	glib2-3.4.9/ext/glib2/rbglib_unicode.c				\
	glib2-3.4.9/ext/glib2/rbglib_utf16.c				\
	glib2-3.4.9/ext/glib2/rbglib_utf8.c				\
	glib2-3.4.9/ext/glib2/rbglib_utils.c				\
	glib2-3.4.9/ext/glib2/rbglib_win32.c				\
	glib2-3.4.9/ext/glib2/rbglibdeprecated.c			\
	glib2-3.4.9/ext/glib2/rbglibdeprecated.h			\
	glib2-3.4.9/ext/glib2/rbgobj_binding.c				\
	glib2-3.4.9/ext/glib2/rbgobj_boxed.c				\
	glib2-3.4.9/ext/glib2/rbgobj_closure.c				\
	glib2-3.4.9/ext/glib2/rbgobj_convert.c				\
	glib2-3.4.9/ext/glib2/rbgobj_enumflags.c			\
	glib2-3.4.9/ext/glib2/rbgobj_enums.c				\
	glib2-3.4.9/ext/glib2/rbgobj_flags.c				\
	glib2-3.4.9/ext/glib2/rbgobj_object.c				\
	glib2-3.4.9/ext/glib2/rbgobj_param.c				\
	glib2-3.4.9/ext/glib2/rbgobj_paramspecs.c			\
	glib2-3.4.9/ext/glib2/rbgobj_signal.c				\
	glib2-3.4.9/ext/glib2/rbgobj_strv.c				\
	glib2-3.4.9/ext/glib2/rbgobj_type.c				\
	glib2-3.4.9/ext/glib2/rbgobj_typeinstance.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typeinterface.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typemodule.c			\
	glib2-3.4.9/ext/glib2/rbgobj_typeplugin.c			\
	glib2-3.4.9/ext/glib2/rbgobj_value.c				\
	glib2-3.4.9/ext/glib2/rbgobj_valuetypes.c			\
	glib2-3.4.9/ext/glib2/rbgobject.c				\
	glib2-3.4.9/ext/glib2/rbgobject.h				\
	glib2-3.4.9/ext/glib2/rbgprivate.h				\
	glib2-3.4.9/ext/glib2/rbgutil.c					\
	glib2-3.4.9/ext/glib2/rbgutil.h					\
	glib2-3.4.9/ext/glib2/rbgutil_callback.c			\
	glib2-3.4.9/ext/glib2/rbgutil_list.c				\
	glib2-3.4.9/ext/glib2/rbgutil_list.h				\
	glib2-3.4.9/ext/glib2/rbgutildeprecated.c			\
	glib2-3.4.9/ext/glib2/rbgutildeprecated.h			\
	glib2-3.4.9/extconf.rb						\
	glib2-3.4.9/glib2.gemspec					\
	glib2-3.4.9/lib/glib-mkenums.rb					\
	glib2-3.4.9/lib/glib2.rb					\
	glib2-3.4.9/lib/glib2/deprecatable.rb				\
	glib2-3.4.9/lib/glib2/deprecated.rb				\
	glib2-3.4.9/lib/glib2/regex.rb					\
	glib2-3.4.9/lib/glib2/version.rb				\
	glib2-3.4.9/lib/gnome2-raketask.rb				\
	glib2-3.4.9/lib/gnome2/rake/external-package.rb			\
	glib2-3.4.9/lib/gnome2/rake/native-binary-build-task.rb		\
	glib2-3.4.9/lib/gnome2/rake/package-task.rb			\
	glib2-3.4.9/lib/gnome2/rake/package.rb				\
	glib2-3.4.9/lib/gnome2/rake/source-download-task.rb		\
	glib2-3.4.9/lib/gnome2/rake/windows-binary-build-task.rb	\
	glib2-3.4.9/lib/gnome2/rake/windows-binary-download-task.rb	\
	glib2-3.4.9/lib/mkmf-gnome.rb					\
	glib2-3.4.9/lib/mkmf-gnome2.rb					\
	glib2-3.4.9/sample/bookmarkfile.rb				\
	glib2-3.4.9/sample/idle.rb					\
	glib2-3.4.9/sample/iochannel.rb					\
	glib2-3.4.9/sample/keyfile.rb					\
	glib2-3.4.9/sample/shell.rb					\
	glib2-3.4.9/sample/spawn.rb					\
	glib2-3.4.9/sample/timeout.rb					\
	glib2-3.4.9/sample/timeout2.rb					\
	glib2-3.4.9/sample/timer.rb					\
	glib2-3.4.9/sample/type-register.rb				\
	glib2-3.4.9/sample/type-register2.rb				\
	glib2-3.4.9/sample/utils.rb					\
	glib2-3.4.9/test/glib-test-utils.rb				\
	glib2-3.4.9/test/run-test.rb					\
	glib2-3.4.9/test/test-binding.rb				\
	glib2-3.4.9/test/test-bytes.rb					\
	glib2-3.4.9/test/test-date-time.rb				\
	glib2-3.4.9/test/test-enum.rb					\
	glib2-3.4.9/test/test-error.rb					\
	glib2-3.4.9/test/test-file-utils.rb				\
	glib2-3.4.9/test/test-flags.rb					\
	glib2-3.4.9/test/test-glib2.rb					\
	glib2-3.4.9/test/test-iochannel.rb				\
	glib2-3.4.9/test/test-key-file.rb				\
	glib2-3.4.9/test/test-match-info.rb				\
	glib2-3.4.9/test/test-mkenums.rb				\
	glib2-3.4.9/test/test-poll-fd.rb				\
	glib2-3.4.9/test/test-regex.rb					\
	glib2-3.4.9/test/test-signal.rb					\
	glib2-3.4.9/test/test-source.rb					\
	glib2-3.4.9/test/test-spawn.rb					\
	glib2-3.4.9/test/test-time-zone.rb				\
	glib2-3.4.9/test/test-timeout.rb				\
	glib2-3.4.9/test/test-type-interface.rb				\
	glib2-3.4.9/test/test-type.rb					\
	glib2-3.4.9/test/test-unicode.rb				\
	glib2-3.4.9/test/test-utils.rb					\
	glib2-3.4.9/test/test-value.rb					\
	glib2-3.4.9/test/test-variant-type.rb				\
	glib2-3.4.9/test/test-variant.rb				\
	glib2-3.4.9/test/test-version.rb				\
	glib2-3.4.9/test/test-win32.rb					\
	glib2-3.4.9/version.rb

# % find gio2-3.4.9 -type f | sort
# Use region and C-c C-\ for adding backslashes to the above list.
ruby_gio2_latest_files =								\
	gio2-3.4.9/COPYING.LIB								\
	gio2-3.4.9/README.md								\
	gio2-3.4.9/Rakefile								\
	gio2-3.4.9/ext/gio2/depend							\
	gio2-3.4.9/ext/gio2/extconf.rb							\
	gio2-3.4.9/ext/gio2/rb-gio2-application.c					\
	gio2-3.4.9/ext/gio2/rb-gio2-pollable-source.c					\
	gio2-3.4.9/ext/gio2/rb-gio2.c							\
	gio2-3.4.9/ext/gio2/rb-gio2.h							\
	gio2-3.4.9/extconf.rb								\
	gio2-3.4.9/gio2.gemspec								\
	gio2-3.4.9/lib/gio2.rb								\
	gio2-3.4.9/lib/gio2/action-map.rb						\
	gio2-3.4.9/lib/gio2/action.rb							\
	gio2-3.4.9/lib/gio2/application-command-line.rb					\
	gio2-3.4.9/lib/gio2/content-type.rb						\
	gio2-3.4.9/lib/gio2/deprecated.rb						\
	gio2-3.4.9/lib/gio2/file.rb							\
	gio2-3.4.9/lib/gio2/icon.rb							\
	gio2-3.4.9/lib/gio2/inet-address.rb						\
	gio2-3.4.9/lib/gio2/input-stream.rb						\
	gio2-3.4.9/lib/gio2/loader.rb							\
	gio2-3.4.9/lib/gio2/menu-item.rb						\
	gio2-3.4.9/lib/gio2/pollable-input-stream.rb					\
	gio2-3.4.9/lib/gio2/pollable-output-stream.rb					\
	gio2-3.4.9/lib/gio2/resources.rb						\
	gio2-3.4.9/lib/gio2/settings-schema-source.rb					\
	gio2-3.4.9/lib/gio2/settings.rb							\
	gio2-3.4.9/lib/gio2/simple-action.rb						\
	gio2-3.4.9/test/fixture/Rakefile						\
	gio2-3.4.9/test/fixture/content-type/x-content/unix-software/autorun.sh		\
	gio2-3.4.9/test/fixture/resource/Rakefile					\
	gio2-3.4.9/test/fixture/resource/logo.png					\
	gio2-3.4.9/test/fixture/resource/ruby-gio2.gresource.xml			\
	gio2-3.4.9/test/fixture/schema/default/jp.ruby-gnome2.test.settings.gschema.xml	\
	gio2-3.4.9/test/fixture/schema/source/jp.ruby-gnome2.test.source.gschema.xml	\
	gio2-3.4.9/test/gio2-test-utils.rb						\
	gio2-3.4.9/test/gio2-test-utils/fixture.rb					\
	gio2-3.4.9/test/gio2-test-utils/omissions.rb					\
	gio2-3.4.9/test/gio2-test-utils/socket-client.rb				\
	gio2-3.4.9/test/run-test.rb							\
	gio2-3.4.9/test/test-action-map.rb						\
	gio2-3.4.9/test/test-application-command-line.rb				\
	gio2-3.4.9/test/test-buffered-input-stream.rb					\
	gio2-3.4.9/test/test-charset-converter.rb					\
	gio2-3.4.9/test/test-content-type.rb						\
	gio2-3.4.9/test/test-data-input-stream.rb					\
	gio2-3.4.9/test/test-dbus.rb							\
	gio2-3.4.9/test/test-file-enumerator.rb						\
	gio2-3.4.9/test/test-file-monitor.rb						\
	gio2-3.4.9/test/test-file.rb							\
	gio2-3.4.9/test/test-icon.rb							\
	gio2-3.4.9/test/test-inet-address.rb						\
	gio2-3.4.9/test/test-input-stream.rb						\
	gio2-3.4.9/test/test-memory-input-stream.rb					\
	gio2-3.4.9/test/test-memory-output-stream.rb					\
	gio2-3.4.9/test/test-menu-item.rb						\
	gio2-3.4.9/test/test-mount.rb							\
	gio2-3.4.9/test/test-output-stream.rb						\
	gio2-3.4.9/test/test-pollable-input-stream.rb					\
	gio2-3.4.9/test/test-pollable-output-stream.rb					\
	gio2-3.4.9/test/test-resources.rb						\
	gio2-3.4.9/test/test-settings-schema-source.rb					\
	gio2-3.4.9/test/test-settings.rb						\
	gio2-3.4.9/test/test-simple-action.rb						\
	gio2-3.4.9/test/test-version.rb

# % find gobject-introspection-3.4.9 -type f | sort
# Use region and C-c C-\ for adding backslashes to the above list.
ruby_gobject_introspection_latest_files =								\
	gobject-introspection-3.4.9/COPYING.LIB								\
	gobject-introspection-3.4.9/README.md								\
	gobject-introspection-3.4.9/Rakefile								\
	gobject-introspection-3.4.9/ext/gobject-introspection/depend					\
	gobject-introspection-3.4.9/ext/gobject-introspection/extconf.rb				\
	gobject-introspection-3.4.9/ext/gobject-introspection/gobject-introspection-enum-types.c	\
	gobject-introspection-3.4.9/ext/gobject-introspection/gobject-introspection-enum-types.h	\
	gobject-introspection-3.4.9/ext/gobject-introspection/gobject_introspection.def			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-arg-info.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-argument.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-arguments-in.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-arguments-out.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-arguments.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-array-type.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-base-info.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-boxed-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-callable-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-callback-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-callback.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-constant-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-constructor-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-conversions.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-direction.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-enum-info.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-field-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-flags-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-function-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-interface-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-loader.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-method-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-object-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-arg-info.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-arguments-in.h		\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-arguments-out.h		\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-arguments.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-array-type.h		\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-callback.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-direction.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private-transfer.h			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-private.h				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-property-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-registered-type-info.c		\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-repository.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-signal-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-struct-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-transfer.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-type-info.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-type-tag.c				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-types.h				\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-union-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-unresolved-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-value-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gi-vfunc-info.c			\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gobject-introspection.c		\
	gobject-introspection-3.4.9/ext/gobject-introspection/rb-gobject-introspection.h		\
	gobject-introspection-3.4.9/extconf.rb								\
	gobject-introspection-3.4.9/gobject-introspection.gemspec					\
	gobject-introspection-3.4.9/lib/gi.rb								\
	gobject-introspection-3.4.9/lib/gobject-introspection.rb					\
	gobject-introspection-3.4.9/lib/gobject-introspection/arg-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/boxed-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/callable-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/collection-reader.rb			\
	gobject-introspection-3.4.9/lib/gobject-introspection/function-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/interface-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/loader.rb					\
	gobject-introspection-3.4.9/lib/gobject-introspection/object-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/registered-type-info.rb			\
	gobject-introspection-3.4.9/lib/gobject-introspection/repository.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/struct-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/type-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/type-tag.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/union-info.rb				\
	gobject-introspection-3.4.9/lib/gobject-introspection/version.rb				\
	gobject-introspection-3.4.9/test/gobject-introspection-test-utils.rb				\
	gobject-introspection-3.4.9/test/run-test.rb							\
	gobject-introspection-3.4.9/test/test-arg-info.rb						\
	gobject-introspection-3.4.9/test/test-base-info.rb						\
	gobject-introspection-3.4.9/test/test-boxed-info.rb						\
	gobject-introspection-3.4.9/test/test-callable-info.rb						\
	gobject-introspection-3.4.9/test/test-callback-info.rb						\
	gobject-introspection-3.4.9/test/test-constant-info.rb						\
	gobject-introspection-3.4.9/test/test-enum-info.rb						\
	gobject-introspection-3.4.9/test/test-field-type.rb						\
	gobject-introspection-3.4.9/test/test-flags-info.rb						\
	gobject-introspection-3.4.9/test/test-function-info.rb						\
	gobject-introspection-3.4.9/test/test-interface-info.rb						\
	gobject-introspection-3.4.9/test/test-loader.rb							\
	gobject-introspection-3.4.9/test/test-object-info.rb						\
	gobject-introspection-3.4.9/test/test-property-info.rb						\
	gobject-introspection-3.4.9/test/test-registered-type-info.rb					\
	gobject-introspection-3.4.9/test/test-repository.rb						\
	gobject-introspection-3.4.9/test/test-signal-info.rb						\
	gobject-introspection-3.4.9/test/test-struct-info.rb						\
	gobject-introspection-3.4.9/test/test-type-info.rb						\
	gobject-introspection-3.4.9/test/test-type-tag.rb						\
	gobject-introspection-3.4.9/test/test-union-info.rb						\
	gobject-introspection-3.4.9/test/test-value-info.rb						\
	gobject-introspection-3.4.9/test/test-version.rb						\
	gobject-introspection-3.4.9/test/test-vfunc-info.rb

# % find pkg-config -not -path '*.git*' -type f | sort | sed -e 's,^,\t,g'
# Use region and C-c C-\ for adding backslashes to the above list.
pkg_config_files = 				\
	pkg-config/Brewfile			\
	pkg-config/Gemfile			\
	pkg-config/LGPL-2.1			\
	pkg-config/NEWS				\
	pkg-config/README.rdoc			\
	pkg-config/Rakefile			\
	pkg-config/lib/pkg-config.rb		\
	pkg-config/lib/pkg-config/version.rb	\
	pkg-config/pkg-config.gemspec		\
	pkg-config/test/run-test.rb		\
	pkg-config/test/test-pkg-config.rb

# % find native-package-installer -not -path '*.git*' -type f | sort | sed -e 's,^,\t,g'
# Use region and C-c C-\ for adding backslashes to the above list.
native_package_installerpkg_files =							\
	native-package-installer/Gemfile						\
	native-package-installer/README.md						\
	native-package-installer/Rakefile						\
	native-package-installer/doc/text/gpl-3.txt					\
	native-package-installer/doc/text/lgpl-3.txt					\
	native-package-installer/doc/text/news.md					\
	native-package-installer/docker-compose.yml					\
	native-package-installer/dockerfiles/almalinux.dockerfile			\
	native-package-installer/dockerfiles/alt-linux.dockerfile			\
	native-package-installer/dockerfiles/arch-linux.dockerfile			\
	native-package-installer/dockerfiles/debian.dockerfile				\
	native-package-installer/dockerfiles/fedora.dockerfile				\
	native-package-installer/dockerfiles/opensuse.dockerfile			\
	native-package-installer/dockerfiles/pld-linux.dockerfile			\
	native-package-installer/dockerfiles/run-test.sh				\
	native-package-installer/dockerfiles/ubuntu.dockerfile				\
	native-package-installer/lib/native-package-installer.rb			\
	native-package-installer/lib/native-package-installer/executable-finder.rb	\
	native-package-installer/lib/native-package-installer/os-release.rb		\
	native-package-installer/lib/native-package-installer/platform.rb		\
	native-package-installer/lib/native-package-installer/platform/alt-linux.rb	\
	native-package-installer/lib/native-package-installer/platform/arch-linux.rb	\
	native-package-installer/lib/native-package-installer/platform/debian.rb	\
	native-package-installer/lib/native-package-installer/platform/fedora.rb	\
	native-package-installer/lib/native-package-installer/platform/freebsd.rb	\
	native-package-installer/lib/native-package-installer/platform/homebrew.rb	\
	native-package-installer/lib/native-package-installer/platform/macports.rb	\
	native-package-installer/lib/native-package-installer/platform/msys2.rb		\
	native-package-installer/lib/native-package-installer/platform/pld-linux.rb	\
	native-package-installer/lib/native-package-installer/platform/redhat.rb	\
	native-package-installer/lib/native-package-installer/platform/suse.rb		\
	native-package-installer/lib/native-package-installer/platform/ubuntu.rb	\
	native-package-installer/lib/native-package-installer/platform/unknown.rb	\
	native-package-installer/lib/native-package-installer/version.rb		\
	native-package-installer/native-package-installer.gemspec			\
	native-package-installer/test/run-test.rb					\
	native-package-installer/test/test-executable-finder.rb
